[package]
name = "ptr_cell"
version = "1.1.0"
authors = ["Nikolay Levkovsky <nik@nous.so>"]
edition = "2021"
description = "Thread-safe cell based on atomic pointers to externally stored data"
readme = "README.md"
repository = "https://github.com/KDFJW/ptr_cell"
license = "CC0-1.0 OR Apache-2.0"
keywords = ["thread-safe", "atomic", "cell"]
categories = ["concurrency", "data-structures", "memory-management"]
