[package]
name = "ptr_cell"
version = "2.2.1"
authors = ["Nikolay Levkovsky <nik@nous.so>"]
edition = "2021"
description = "Thread-safe cell based on atomic pointers"
readme = "README.md"
repository = "https://github.com/KDFJW/ptr_cell"
license = "CC0-1.0"
keywords = ["thread-safe", "atomic", "cell", "no_std"]
categories = ["memory-management", "data-structures", "concurrency", "no-std"]

[features]
std = []
